# qdgz300_backend

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  findings.md  progress.md  task_plan.md  temp.md
benches/: CMakeLists.txt  README_numa_affinity.md  bench_simulation.h  fpga_rx_limit.cpp  numa_affinity.cpp  throughput.cpp
cmake/: CompilerOptions.cmake  CompilerWarnings.cmake  FindBoost.cmake  FindIluvatarCorex.cmake  options.cmake  third_party.cmake  warnings.cmake
cmake/toolchains/: aarch64-linux-gnu.cmake  aarch64-linux.cmake
config/: receiver.yaml  receiver_single_face_local.yaml  simulator.yaml
configs/: default.yaml
deploy/: README.md  install.sh  receiver_config_example.yaml  uninstall.sh
deploy/sysctl/: 90-qdgz300.conf
deploy/systemd/: cpu-performance.service  nic-optimization.service  qdgz300-receiver.service  qdgz300-spool-mover.service  qdgz300-sysctl.service
deps_offline/: README.md  build_deps.sh  extract_all.sh
docs/: jing.md  接收端待确定的问题.md  接收端补充设计说明.md  接收端设计需求.md  波位控制与UDP数据包格式说明.md  系统侧调优检查清单.md  缺失丢包降级.md
docs/AI临时上下文/: 接收端专题_模块职责边界.md  接收端专题_模块设计目标.md
docs/Inbox/待整理/: signal_processing_taskbook_standardized.md  信号处理软件研制任务书v1.0.md  内部-信号处理软件研制任务书_标准化Markdown母版_v1.md  无硬件秒边界输入条件下的秒边界设计说明.md  标识体系表（语义冻结）.md  系统框图.drawio  雷达服务器与前端阵面协同架构设计参考.md  雷达项目上下文总览_v0.2.md  雷达项目上下文总览_v0.3.md
docs/Inbox/近期高频参考/: 20250327_接收端补充设计说明.md
docs/_archive/AI过程/: 代理编程元Prompt.md  针对算法第一环前置需要冻结设计的清单_原稿.md
docs/_archive/使用指南/: 本地性能可视化面板使用说明.md
docs/_archive/规划/: QDGZ300_重构分阶段计划.md  TODO_未实现能力.md  任务书.md  同类项目构建与组织架构重构指南（麒麟V10_ARM64）.md  (+1 more)
docs/任务规划/: p0_p1联调问题清单.md  任务书.md  数据接收模块.md
docs/冻结的设计资产/: SECTION 3 物理层与数据链路层.md  前端感知通信协议v3.1.md
docs/冻结资产/: 00_冻结资产索引.md  02_系统概述.md  SECTION 1 引言与适用范围.md  波位控制与UDP数据包格式说明.md
docs/基线/: 麒麟V10_ARM64_CoreX_CUDA_部署基线.md
docs/性能优化/: m01单阵面轻量接收性能基线.md  m01性能优化方案.md
docs/自用指南/: 服务器部署和压测指南.md  雷达接收模块压测保姆级教程.md
docs/规划/: 后续演进路线图.md  接收端优化方案.md
docs/设计文档/: 00_顶层架构.md  顶层设计_1.md  顶层设计_2.md  顶层设计_3.md  顶层设计_4.md  顶层设计_7.md  顶层设计_8.md
docs/进展/: 00_工作入口.md  当前状态与能力缺口.md
docs/部署基线/: 麒麟V10_ARM64_CoreX_CUDA_部署基线.md
docs/项目开发和维护/: 系统数据流控制流与状态约束.md  项目工程目录结构与代码分层约定.md  项目工程约束与运行治理要求.md  项目整体实现结构与模块关系.md
docs/项目源代码文档/: m01_receiver.md  全系统项目骨架文档.md  项目审查报告_2026-03-09.md
docs/项目规划/: QDGZ300_重构分阶段计划.md
docs/项目进展/: 00_工作入口.md
monitoring/: grafana-dashboard.json
output/doc/: 信号处理软件研制任务书.docx
proto/: hmi_protocol.proto
scripts/: build_production.sh  dev_build_wsl_cross.sh  prepare_native_deps.sh  prepare_wsl_cross_deps.sh
scripts/install/: install_local.sh
scripts/ops/: check_services.sh  enable_services.sh  start_services.sh  stop_services.sh  tail_logs.sh
scripts/test/: test_common.sh  test_control.sh  test_integration.sh  test_integration_m01.sh  test_integration_m02.sh  test_m01.sh  test_m02.sh  test_m03.sh  test_m04.sh  test_spool_soak.sh  test_unit.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  error_codes.cpp  metrics.cpp  numa_utils.cpp  system_state.cpp
src/control/: CMakeLists.txt  README.md  boot_checker.cpp  command_bridge.cpp  event_dispatcher.cpp  orchestrator.cpp  orchestrator_metrics.cpp  runtime_monitor.cpp  state_machine.cpp
src/logging/: async_logger.cpp  metrics_exporter.cpp
src/m01_receiver/: CMakeLists.txt  README.md  app_init.cpp  app_run.cpp  main.cpp  signal_handler.cpp
src/m01_receiver/capture/: pcap_writer.cpp
src/m01_receiver/config/: config_manager.cpp
src/m01_receiver/delivery/: delivery_interface.cpp  rawblock_adapter.cpp  stub_consumer.cpp
src/m01_receiver/monitoring/: logger.cpp  metrics.cpp
src/m01_receiver/network/: array_face_receiver.cpp  packet_pool.cpp  udp_receiver.cpp
src/m01_receiver/pipeline/: dispatcher.cpp  reassembler.cpp  reorderer.cpp  rx_stage.cpp
src/m01_receiver/protocol/: crc32c.cpp  packet_parser.cpp  validator.cpp
src/m02_signal_proc/: CMakeLists.txt  README.md  cuda_stream_pool.cpp  gpu_dispatcher.cpp  gpu_pipeline.cpp  pinned_buffer_pool.cpp  signal_proc_metrics.cpp
src/m03_data_proc/: CMakeLists.txt  README.md  data_proc_metrics.cpp  fusion_engine.cpp  kalman_filter.cpp  plot_associator.cpp  track_frame_builder.cpp  track_manager.cpp  tracker.cpp
src/m04_gateway/: CMakeLists.txt  README.md  gateway_metrics.cpp  hmi_session.cpp  output_throttle.cpp  tcp_server.cpp  trackdata_serializer.cpp  udp_sender.cpp
src/towerguard/: CMakeLists.txt
tests/: CMakeLists.txt  common_error_codes_tests.cpp  common_event_types_tests.cpp  common_memory_pool_tests.cpp  common_spsc_queue_tests.cpp  common_system_state_tests.cpp  gpu_dispatcher_tests.cpp  gpu_pipeline_inflight_tests.cpp  integration_m01_m02_e2e_tests.cpp  integration_rawblock_delivery_tests.cpp  integration_tests_fpga.cpp  m02_resource_pool_tests.cpp  m02_signal_proc_tests.cpp  metrics_tests.cpp  packet_pool_tests.cpp  pcap_writer_tests.cpp  protocol_tests.cpp  qos_priority_tests.cpp  reassembler_tests.cpp  spsc_queue_tests.cpp  udp_receiver_tests.cpp  validator_tests.cpp
tests/integration/: CMakeLists.txt  integration_m01_m02_e2e_tests.cpp  integration_rawblock_delivery_tests.cpp  integration_tests_fpga.cpp  integration_tests_m01.cpp  m02_dispatcher_integration_tests.cpp
tests/unit/: CMakeLists.txt  common_config_snapshot_tests.cpp  common_metrics_tests.cpp  common_types_tests.cpp  config_manager_tests.cpp  control_tests.cpp  gpu_pipeline_inflight_tests.cpp  m03_data_proc_tests.cpp  m04_gateway_tests.cpp  metrics_tests.cpp  pcap_writer_tests.cpp  rawblock_adapter_tests.cpp  reorderer_tests.cpp  simulator.cpp  stub_consumer_tests.cpp
tmp/: p1p2任务书.md
tmp/docs/: md_to_docx.py
tools/: CMakeLists.txt  cpu_performance.sh  kds_bind_fixed_ips.sh  nic_tuning.sh  pcap_analyze.cpp  pcap_replay.cpp  pcap_spool_mover.sh  receiver_perf_dashboard.py  run_fpga_stress_test.sh  run_receiver_standard_bench.sh  server_perf_harness.py
tools/benchmarks/: CMakeLists.txt  README_numa_affinity.md  capacity_test.cpp  m01_rx_limit.cpp  numa_affinity.cpp  stress_test.cpp
tools/fpga_emulator/: emulator_main.cpp  packet_generator.cpp  packet_generator.h
tools/测试/: 验证M01测试.ps1
(+119 files in other folders)
